PRE-966 fix block spacing and padding

--- a/dev/css/components/molecules/state.less
+++ b/dev/css/components/molecules/state.less
@@ -2,6 +2,10 @@
 
   min-height: 150px;
 
+  ._description {
+    margin: 0 0 40px;
+  }
+
   .payplugUIAccordion {
     &_contentWrapper {
       width: 100%;
@@ -55,7 +59,7 @@
           .indicator {
             display: flex;
             flex-wrap: nowrap;
-            padding: 10px 0;
+            padding: 3px 0 0;
             .closeClass > svg {
               fill: #colorMap[accentuationWarning500];
             }
